--- a/air_quality_web/home_page.html
+++ b/air_quality_web/home_page.html
@@ -36,7 +36,7 @@
       minWidth: 200.00,
       scale: 1.00,
       scaleMobile: 1.00,
-      color: 0x2E8B57
+      color: 0x000080
     });
     </script>
     
