--- a/air_quality_web/home_page.html
+++ b/air_quality_web/home_page.html
@@ -16,7 +16,7 @@
     </div>
     <div class="animated-background"></div>
     <div class="content">
-        <h2 class="logo">HomePage</h2>
+        <h2 class="logo">img src=""</h2>
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
@@ -36,7 +36,7 @@
       minWidth: 200.00,
       scale: 1.00,
       scaleMobile: 1.00,
-      color: 0x2E8B57
+      color: 0x305CDE, // Color of the waves
     });
     </script>
     
@@ -47,6 +47,10 @@
     </script>
 </body>
 </html>
+
+
+
+
 
 
 
