--- a/air_quality_web/home_page.html
+++ b/air_quality_web/home_page.html
@@ -23,7 +23,9 @@
             <li><a href="#">Contact Us</a></li>
             <li><a href="#">Services</a></li>
         </ul>
-        <button type="button">Login</button>
+        <button type="button">Login
+            <a href="https://mh-devanarayanan-2004.github.io/MINIPROJECT/userlogin.html"></a>
+        </button>
     </div>
 
     <script>
