--- a/air_quality_web/home_page.html
+++ b/air_quality_web/home_page.html
@@ -16,21 +16,19 @@
     </div>
     <div class="animated-background"></div>
     <div class="content">
-        <h2 class="logo">img src=""</h2>
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact Us</a></li>
             <li><a href="#">Services</a></li>
         </ul>
-        <button type="button">Login
-            <a href="https://mh-devanarayanan-2004.github.io/MINIPROJECT/userlogin.html"></a>
+        <button>
+          <a class="button" href="https://mh-devanarayanan-2004.github.io/MINIPROJECT/userlogin.html">Login</a>
         </button>
     </div>
-
     <script>
     VANTA.WAVES({
-      el: ".animated-background",  // Apply the animation to the full-viewport div
+      el: ".animated-background",  
       mouseControls: true,
       touchControls: true,
       gyroControls: false,
@@ -38,7 +36,7 @@
       minWidth: 200.00,
       scale: 1.00,
       scaleMobile: 1.00,
-      color: 0x305CDE, // Color of the waves
+      color: 0x305CDE, 
     });
     </script>
     
@@ -49,10 +47,6 @@
     </script>
 </body>
 </html>
-
-
-
-
 
 
 
