--- a/air_quality_web/home_page.html
+++ b/air_quality_web/home_page.html
@@ -42,7 +42,7 @@
     <a href="#" class="btn-signing-main">Get Started</a>
   </div>
   <div class="img-container">
-    <img src="C:\xampp\htdocs\air_quality_web\img\system.png" alt="" height="40%" width="40%">
+    <img src="air_quality_web/img/system.png" alt="" height="40%" width="40%">
   </div>
     <script>
     VANTA.WAVES({
