--- a/air_quality_web/home_page.html
+++ b/air_quality_web/home_page.html
@@ -17,7 +17,7 @@
     <div class="animated-background"></div>
     <div class="content">
         <a href="#" class="img">
-            <img src=""C:\xampp\htdocs\air_quality_web\img\mini_logo.png"" alt="">
+            <img src="air_quality_web/img/mini_logo.png" alt="">
         </a>
         <ul>
             <li><a href="#">Home</a></li>
