--- a/air_quality_web/about.html
+++ b/air_quality_web/about.html
@@ -3,32 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Air Quality Monitoring System</title>
+    <title>Welcome | Air Quality Monitoring System</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/home.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.waves.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 <body>
     <div class="loader-wrapper">
-        <span class="loader"><span class="loader-inner"></span></span>
-      </div>
-      <div class="animated-background"></div>
-      <div class="content">
-          <a href="#" class="img">
-              <img src=""C:\xampp\htdocs\air_quality_web\img\mini_logo.png"" alt="">
-          </a>
-          <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Contact Us</a></li>
-              <li><a href="#">Services</a></li>
-          </ul>
-          <button>
-            <a class="button" href="https://mh-devanarayanan-2004.github.io/MINIPROJECT/userlogin.html">Login</a>
-          </button>
+      <span class="loader"><span class="loader-inner"></span></span>
+    </div>
+    <div class="animated-background"></div>
+    <div class="content">
+        <a href="#" class="img">
+            <img src=""C:\xampp\htdocs\air_quality_web\img\mini_logo.png"" alt="">
+        </a>
+        <ul>
+            <li><a href="https://morpheus-pwn.github.io/airquality_web//air_quality_web/home_page.html">Home</a></li>
+            <li><a href="https://morpheus-pwn.github.io/airquality_web//air_quality_web/about.html">About</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Services</a></li>
+        </ul>
+        <button>
+          <a class="button" href="https://mh-devanarayanan-2004.github.io/MINIPROJECT/userlogin.html">Login</a>
+        </button>
+    </div>
+    <main>
+        <div class="tag-box">
+          <div class="tag">INTRODUCING &wedbar;</div>
         </div>
+        <h1>WELCOME TO<br>AIR QUALITY MONITORING SYSTEM</h1>
+        <p class="description">This is a web-based air quality monitoring system designed to help you monitor air quality in your local area. The system uses real-time data from various sensors and displays it in a user-friendly interface. The data includes air temperature, humidity,oxygen,nitrogen and pollutants like carbon monoxide, nitrogen dioxide.
+        </p>
+    </main>
+
+  <div class="buttons">
+    <a href="#" class="btn-signing-main">Get Started</a>
+  </div>
+  <div class="img-container">
+    <img src="C:\xampp\htdocs\air_quality_web\img\system.png" alt="" height="40%" width="40%">
+  </div>
     <script>
     VANTA.WAVES({
       el: ".animated-background",  
@@ -50,3 +65,6 @@
     </script>
 </body>
 </html>
+
+
+
