--- a/air_quality_web/about.html
+++ b/air_quality_web/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome | Air Quality Monitoring System</title>
+    <title>About | Air Quality Monitoring System</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/home.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
@@ -17,7 +17,7 @@
     <div class="animated-background"></div>
     <div class="content">
         <a href="#" class="img">
-            <img src=""C:\xampp\htdocs\air_quality_web\img\mini_logo.png"" alt="">
+            <img src="C:\xampp\htdocs\air_quality_web\img\mini_logo.png" alt="">
         </a>
         <ul>
             <li><a href="https://morpheus-pwn.github.io/airquality_web//air_quality_web/home_page.html">Home</a></li>
@@ -29,21 +29,7 @@
           <a class="button" href="https://mh-devanarayanan-2004.github.io/MINIPROJECT/userlogin.html">Login</a>
         </button>
     </div>
-    <main>
-        <div class="tag-box">
-          <div class="tag">INTRODUCING &wedbar;</div>
-        </div>
-        <h1>WELCOME TO<br>AIR QUALITY MONITORING SYSTEM</h1>
-        <p class="description">This is a web-based air quality monitoring system designed to help you monitor air quality in your local area. The system uses real-time data from various sensors and displays it in a user-friendly interface. The data includes air temperature, humidity,oxygen,nitrogen and pollutants like carbon monoxide, nitrogen dioxide.
-        </p>
-    </main>
 
-  <div class="buttons">
-    <a href="#" class="btn-signing-main">Get Started</a>
-  </div>
-  <div class="img-container">
-    <img src="C:\xampp\htdocs\air_quality_web\img\system.png" alt="" height="40%" width="40%">
-  </div>
     <script>
     VANTA.WAVES({
       el: ".animated-background",  
