--- a/air_quality_web/about.html
+++ b/air_quality_web/about.html
@@ -29,28 +29,10 @@
           <a class="button" href="https://mh-devanarayanan-2004.github.io/MINIPROJECT/userlogin.html">Login</a>
         </button>
     </div>
-
-    <script>
-    VANTA.WAVES({
-      el: ".animated-background",  
-      mouseControls: true,
-      touchControls: true,
-      gyroControls: false,
-      minHeight: 200.00,
-      minWidth: 200.00,
-      scale: 1.00,
-      scaleMobile: 1.00,
-      color: 0x305CDE, 
-    });
-    </script>
-    
-    <script>
-      $(window).on("load", function() {
-        $(".loader-wrapper").fadeOut("very slow");
-      });
-    </script>
+    <div id="app">
+      <div id="hero">
+        <a target="_blank" href="https://morpheus-pwn.github.io/airquality_web//air_quality_web/home_page.html"></a>
+      </div>
+    </div>
 </body>
 </html>
-
-
-
