--- a/air_quality_web/home_page.html
+++ b/air_quality_web/home_page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Air Quality Monitoring System</title>
+    <title>Welcome | Air Quality Monitoring System</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/home.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
@@ -17,13 +17,12 @@
     <div class="animated-background"></div>
     <div class="content">
         <a href="#" class="img">
-            <img src="air_quality_web/img/mini_logo.png" alt="">
+            <img src="C:\xampp\htdocs\air_quality_web\img\mini_logo.png" alt="" height="120px" width="150px">
         </a>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="https://morpheus-pwn.github.io/airquality_web//air_quality_web/home_page.html">Home</a></li>
+            <li><a href="https://morpheus-pwn.github.io/airquality_web//air_quality_web/about.html">About</a></li>
             <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Services</a></li>
         </ul>
         <button>
           <a class="button" href="https://mh-devanarayanan-2004.github.io/MINIPROJECT/userlogin.html">Login</a>
@@ -42,7 +41,7 @@
     <a href="#" class="btn-signing-main">Get Started</a>
   </div>
   <div class="img-container">
-    <img src="air_quality_web/img/system.png" alt="" height="40%" width="40%">
+    <img src="C:\xampp\htdocs\air_quality_web\img\system.png" alt="" height="40%" width="40%">
   </div>
     <script>
     VANTA.WAVES({
