--- a/air_quality_web/about.html
+++ b/air_quality_web/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About | Air Quality Monitoring System</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/about.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.waves.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -23,7 +23,6 @@
             <li><a href="https://morpheus-pwn.github.io/airquality_web//air_quality_web/home_page.html">Home</a></li>
             <li><a href="https://morpheus-pwn.github.io/airquality_web//air_quality_web/about.html">About</a></li>
             <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Services</a></li>
         </ul>
         <button>
           <a class="button" href="https://mh-devanarayanan-2004.github.io/MINIPROJECT/userlogin.html">Login</a>
