--- a/air_quality_web/home_page.html
+++ b/air_quality_web/home_page.html
@@ -17,7 +17,7 @@
     <div class="animated-background"></div>
     <div class="content">
         <a href="#" class="img">
-            <img src="air_quality_web/img/mini_logo.png" alt="" height="120px" width="150px">
+            <img src="img/mini_logo.png" alt="" height="120px" width="150px">
         </a>
         <ul>
             <li><a href="https://morpheus-pwn.github.io/airquality_web//air_quality_web/home_page.html">Home</a></li>
@@ -41,7 +41,7 @@
     <a href="#" class="btn-signing-main">Get Started</a>
   </div>
   <div class="img-container">
-    <img src="air_quality_web/img/system.png" alt="" height="40%" width="40%">
+    <img src="img/system.png" alt="" height="40%" width="40%">
   </div>
     <script>
     VANTA.WAVES({
