--- a/air_quality_web/home_page.html
+++ b/air_quality_web/home_page.html
@@ -17,7 +17,7 @@
     <div class="animated-background"></div>
     <div class="content">
         <a href="#" class="img">
-            <img src="img/mini_logo.png" alt="" height="120px" width="150px">
+            <img src="C:\xampp\htdocs\air_quality_web\img\mini_logo.png" alt="" height="120px" width="150px">
         </a>
         <ul>
             <li><a href="https://morpheus-pwn.github.io/airquality_web//air_quality_web/home_page.html">Home</a></li>
@@ -36,13 +36,49 @@
         <p class="description">This is a web-based air quality monitoring system designed to help you monitor air quality in your local area. The system uses real-time data from various sensors and displays it in a user-friendly interface. The data includes air temperature, humidity,oxygen,nitrogen and pollutants like carbon monoxide, nitrogen dioxide.
         </p>
     </main>
-
+    <div class="b-example-divider"></div>
+        <div class="container px-4 py-5" id="featured-3">
+          <h2 class="pb-2 border-bottom">Columns with icons</h2>
+          <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+            <div class="feature col">
+              <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
+                <svg class="bi" width="1em" height="1em"><use xlink:href="#collection"/></svg>
+              </div>
+              <h3 class="fs-2 text-body-emphasis">Featured title</h3>
+              <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+            </div>
+            <div class="feature col">
+              <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
+                <svg class="bi" width="1em" height="1em"><use xlink:href="#people-circle"/></svg>
+              </div>
+              <h3 class="fs-2 text-body-emphasis">Featured title</h3>
+              <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+              <a href="#" class="icon-link">
+                Call to action
+                <svg class="bi"><use xlink:href="#chevron-right"/></svg>
+              </a>
+            </div>
+            <div class="feature col">
+              <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
+                <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"/></svg>
+              </div>
+              <h3 class="fs-2 text-body-emphasis">Featured title</h3>
+              <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+              <a href="#" class="icon-link">
+                Call to action
+                <svg class="bi"><use xlink:href="#chevron-right"/></svg>
+              </a>
+            </div>
+          </div>
+        </div>
+    <div class="b-example-divider"></div>  
   <div class="buttons">
     <a href="#" class="btn-signing-main">Get Started</a>
   </div>
   <div class="img-container">
-    <img src="air_quality_web/img/system.png" alt="" height="40%" width="40%">
+    <img src="C:\xampp\htdocs\air_quality_web\img\system.png" alt="" height="40%" width="40%">
   </div>
+
     <script>
     VANTA.WAVES({
       el: ".animated-background",  
