--- a/air_quality_web/home_page.html
+++ b/air_quality_web/home_page.html
@@ -81,7 +81,7 @@
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-bottom">
       <p class="col-md-4 mb-0 text-body-secondary">© 2025 Air Quality Monitoring System, Inc</p>
       <a href="#" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-          <img src="C:\xampp\htdocs\air_quality_web\img\mini_logo.png" alt="" height="60px" width="130px">
+          <img src="img\mini_logo.png" alt="" height="60px" width="130px">
       </a>
       <ul class="nav col-md-4 justify-content-end">
         <li class="nav-item"><a href="https://morpheus-pwn.github.io/airquality_web//air_quality_web/home_page.html" class="nav-link px-2 text-body-secondary">Home  |    </a></li>
