--- a/air_quality_web/about.html
+++ b/air_quality_web/about.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/about.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.waves.min.js"></script>
+    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 <body>
@@ -17,7 +19,7 @@
     <div class="animated-background"></div>
     <div class="content">
         <a href="#" class="img">
-            <img src="C:\xampp\htdocs\air_quality_web\img\mini_logo.png" alt="">
+            <img src="C:\xampp\htdocs\air_quality_web\img\mini_logo.png" alt="" height="120px" width="150px">
         </a>
         <ul>
             <li><a href="https://morpheus-pwn.github.io/airquality_web//air_quality_web/home_page.html">Home</a></li>
@@ -28,10 +30,80 @@
           <a class="button" href="https://mh-devanarayanan-2004.github.io/MINIPROJECT/userlogin.html">Login</a>
         </button>
     </div>
-    <div id="app">
-      <div id="hero">
-        <a target="_blank" href="https://morpheus-pwn.github.io/airquality_web//air_quality_web/home_page.html"></a>
+    <div class="b-example-divider"></div>
+    <div class="container px-4 py-5" id="featured-3">
+      <div id="particles-js" width="960px" height="600px"></div>
+      <h2 class="pb-2 border-bottom">Columns with icons</h2>
+      <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+        <div class="feature col">
+          <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
+            <svg class="bi" width="1em" height="1em"><use xlink:href="#collection"/></svg>
+          </div>
+          <h3 class="fs-2 text-body-emphasis">Featured title</h3>
+          <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+        </div>
+        <div class="feature col">
+          <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
+            <svg class="bi" width="1em" height="1em"><use xlink:href="#people-circle"/></svg>
+          </div>
+          <h3 class="fs-2 text-body-emphasis">Featured title</h3>
+          <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+          <a href="#" class="icon-link">
+            Call to action
+            <svg class="bi"><use xlink:href="#chevron-right"/></svg>
+          </a>
+        </div>
+        <div class="feature col">
+          <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
+            <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"/></svg>
+          </div>
+          <h3 class="fs-2 text-body-emphasis">Featured title</h3>
+          <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+          <a href="#" class="icon-link">
+            Call to action
+            <svg class="bi"><use xlink:href="#chevron-right"/></svg>
+          </a>
+        </div>
+        <div class="b-example-divider"></div>
       </div>
+    </div> 
+    <div class="buttons">
+      <a href="https://mh-devanarayanan-2004.github.io/MINIPROJECT/userlogin.html" class="btn-signing-main">Login</a>
     </div>
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-bottom">
+      <p class="col-md-4 mb-0 text-body-secondary">© 2025 Air Quality Monitoring System, Inc</p>
+      <a href="#" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+          <img src="C:\xampp\htdocs\air_quality_web\img\mini_logo.png" alt="" height="60px" width="130px">
+      </a>
+      <ul class="nav col-md-4 justify-content-end">
+        <li class="nav-item"><a href="https://morpheus-pwn.github.io/airquality_web//air_quality_web/home_page.html" class="nav-link px-2 text-body-secondary">Home  |    </a></li>
+        <li class="nav-item"><a href="https://morpheus-pwn.github.io/airquality_web//air_quality_web/about.html" class="nav-link px-2 text-body-secondary">About    |</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Contact Us</a></li>
+      </ul>
+    </footer>
+    <script>
+      VANTA.WAVES({
+        el: ".animated-background",  
+        mouseControls: true,
+        touchControls: true,
+        gyroControls: false,
+        minHeight: 200.00,
+        minWidth: 200.00,
+        scale: 1.00,
+        scaleMobile: 1.00,
+        color: 0x305CDE, 
+      });
+    </script>
+    <script>
+      $(window).on("load", function() {
+        $(".loader-wrapper").fadeOut("very slow");
+      });
+    </script>
+    <script>
+      particlesJS("particles-js", {"particles":{"number":{"value":19,"density":{"enable":false,"value_area":479.8080767692925}},"color":{"value":"#fcfcfc"},"shape":{"type":"circle","stroke":{"width":0,"color":"#000"},"polygon":{"nb_sides":12},"image":{"src":"img/github.svg","width":100,"height":100}},"opacity":{"value":0.6957217113154741,"random":true,"anim":{"enable":true,"speed":0.80995925904927,"opacity_min":0.1,"sync":false}},"size":{"value":79.96801279488209,"random":true,"anim":{"enable":true,"speed":10,"size_min":40,"sync":false}},"line_linked":{"enable":false,"distance":200,"color":"#ffffff","opacity":1,"width":2},"move":{"enable":true,"speed":8,"direction":"none","random":false,"straight":false,"out_mode":"out","bounce":false,"attract":{"enable":false,"rotateX":600,"rotateY":1200}}},"interactivity":{"detect_on":"canvas","events":{"onhover":{"enable":false,"mode":"grab"},"onclick":{"enable":false,"mode":"push"},"resize":true},"modes":{"grab":{"distance":400,"line_linked":{"opacity":1}},"bubble":{"distance":400,"size":40,"duration":2,"opacity":8,"speed":3},"repulse":{"distance":200,"duration":0.4},"push":{"particles_nb":4},"remove":{"particles_nb":2}}},"retina_detect":true});var count_particles, stats, update; stats = new Stats; stats.setMode(0); stats.domElement.style.position = 'absolute'; stats.domElement.style.left = '0px'; stats.domElement.style.top = '0px'; document.body.appendChild(stats.domElement); count_particles = document.querySelector('.js-count-particles'); update = function() { stats.begin(); stats.end(); if (window.pJSDom[0].pJS.particles && window.pJSDom[0].pJS.particles.array) { count_particles.innerText = window.pJSDom[0].pJS.particles.array.length; } requestAnimationFrame(update); }; requestAnimationFrame(update);;
+    </script>
 </body>
 </html>
+
+
+
