--- a/air_quality_web/home_page.html
+++ b/air_quality_web/home_page.html
@@ -35,7 +35,7 @@
           <div class="tag">INTRODUCING &wedbar;</div>
         </div>
         <h1>WELCOME TO<br>AIR QUALITY MONITORING SYSTEM</h1>
-        <p class="description">This is a web-based air quality monitoring system designed to help you monitor air quality in your local area. The system uses real-time data from various sensors and displays it in a user-friendly interface. The data includes air temperature, humidity,oxygen,nitrogen and pollutants like carbon monoxide, nitrogen dioxide.
+        <p class="description">This is a web-based air quality monitoring system designed to help you monitor air quality in your local area. The system uses real-time data from various sensors and displays it in a user-friendly interface. The data includes air temperature, humidity,LPG gas and pollutants like carbon monoxide.
         </p>
     </main>
     <div class="b-example-divider"></div>
@@ -47,30 +47,31 @@
           <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
             <svg class="bi" width="1em" height="1em"><use xlink:href="#collection"/></svg>
           </div>
-          <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-          <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+          <h3 class="fs-2 text-body-emphasis">What we do</h3>
+          <p>1. Real-Time Air Quality Monitoring: Our system measures key pollutants like carbon monoxide (CO),nitrogen dioxide(NO2), and volatile organic compounds (VOCs) like LPG.</p>
+          <p>2. IoT-Based Data Transmission: Using Wi-Fi-enabled NodeMCU microcontrollers, we transmit live data to an online platform.</p>
+          <p>3. User-Friendly Web Interface: We provide a web-based dashboard that allows users to visualize air quality data, receive alerts, and track historical trends.</p>
+          <p>4. Smart Alerts & Analysis: The system notifies users of hazardous pollution levels and provides insights for better decision-making.</p>
         </div>
         <div class="feature col">
           <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
             <svg class="bi" width="1em" height="1em"><use xlink:href="#people-circle"/></svg>
           </div>
-          <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-          <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-          <a href="#" class="icon-link">
-            Call to action
-            <svg class="bi"><use xlink:href="#chevron-right"/></svg>
-          </a>
+          <h3 class="fs-2 text-body-emphasis">Why It Matters</h3>
+          <p>Air pollution is a major environmental and health concern. By providing real-time data and insights, our system:</p>
+          <p>1. Encourages public health awareness and action.</p>
+          <p>2. Supports public health initiatives.</p>
+          <p>3. Improves air quality and reduces the risk of respiratory diseases.</p>
+          <p>4. Helps reduce the need for expensive and unreliable emissions controls.</p>
         </div>
         <div class="feature col">
           <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
             <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"/></svg>
           </div>
-          <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-          <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-          <a href="#" class="icon-link">
-            Call to action
-            <svg class="bi"><use xlink:href="#chevron-right"/></svg>
-          </a>
+          <h3 class="fs-2 text-body-emphasis">Future Goals</h3>
+          <p>Enhancing Sensor Accuracy: Implementing advanced calibration techniques to ensure precise measurements.</p>
+          <p>Expanding Capabilities: Adding sensors for more environmental parameters like PM2.5, PM10, and VOCs using advanced sensors.</p>
+          <p>Predictive Analytics: Utilizing AI and machine learning to predict air quality trends and provide proactive alerts.</p>
         </div>
         <div class="b-example-divider"></div>
       </div>
@@ -111,21 +112,7 @@
       });
     </script>
     <script>
-      particlesJS("particles-js", {"particles":{"number":{"value":19,"density":{"enable":false,"value_area":479.8080767692925}},
-      "color":{"value":"#fcfcfc"},"shape":{"type":"circle","stroke":{"width":0,"color":"#000"},"polygon":{"nb_sides":12},
-      "image":{"src":"img/github.svg","width":100,"height":100}},"opacity":{"value":0.6957217113154741,"random":true,
-      "anim":{"enable":true,"speed":0.80995925904927,"opacity_min":0.1,"sync":false}},"size":{"value":79.96801279488209,
-      "random":true,"anim":{"enable":true,"speed":10,"size_min":40,"sync":false}},
-      "line_linked":{"enable":false,"distance":200,"color":"#ffffff","opacity":1,"width":2},
-      "move":{"enable":true,"speed":8,"direction":"none","random":false,"straight":false,"out_mode":"out","bounce":false,
-      "attract":{"enable":false,"rotateX":600,"rotateY":1200}}},"interactivity":{"detect_on":"canvas","events":{"onhover":{"enable":false,"mode":"grab"},
-      "onclick":{"enable":false,"mode":"push"},"resize":true},"modes":{"grab":{"distance":400,"line_linked":{"opacity":1}},
-      "bubble":{"distance":400,"size":40,"duration":2,"opacity":8,"speed":3},"repulse":{"distance":200,"duration":0.4},
-      "push":{"particles_nb":4},"remove":{"particles_nb":2}}},"retina_detect":true});var count_particles, stats, update; 
-      stats = new Stats; stats.setMode(0); stats.domElement.style.position = 'absolute'; stats.domElement.style.left = '0px'; 
-      stats.domElement.style.top = '0px'; document.body.appendChild(stats.domElement); count_particles = document.querySelector('.js-count-particles');
-      update = function() { stats.begin(); stats.end(); if (window.pJSDom[0].pJS.particles && window.pJSDom[0].pJS.particles.array) 
-      { count_particles.innerText = window.pJSDom[0].pJS.particles.array.length; } requestAnimationFrame(update); }; requestAnimationFrame(update);;
+      particlesJS("particles-js", {"particles":{"number":{"value":19,"density":{"enable":false,"value_area":479.8080767692925}},"color":{"value":"#fcfcfc"},"shape":{"type":"circle","stroke":{"width":0,"color":"#000"},"polygon":{"nb_sides":12},"image":{"src":"img/github.svg","width":100,"height":100}},"opacity":{"value":0.6957217113154741,"random":true,"anim":{"enable":true,"speed":0.80995925904927,"opacity_min":0.1,"sync":false}},"size":{"value":79.96801279488209,"random":true,"anim":{"enable":true,"speed":10,"size_min":40,"sync":false}},"line_linked":{"enable":false,"distance":200,"color":"#ffffff","opacity":1,"width":2},"move":{"enable":true,"speed":8,"direction":"none","random":false,"straight":false,"out_mode":"out","bounce":false,"attract":{"enable":false,"rotateX":600,"rotateY":1200}}},"interactivity":{"detect_on":"canvas","events":{"onhover":{"enable":false,"mode":"grab"},"onclick":{"enable":false,"mode":"push"},"resize":true},"modes":{"grab":{"distance":400,"line_linked":{"opacity":1}},"bubble":{"distance":400,"size":40,"duration":2,"opacity":8,"speed":3},"repulse":{"distance":200,"duration":0.4},"push":{"particles_nb":4},"remove":{"particles_nb":2}}},"retina_detect":true});var count_particles, stats, update; stats = new Stats; stats.setMode(0); stats.domElement.style.position = 'absolute'; stats.domElement.style.left = '0px'; stats.domElement.style.top = '0px'; document.body.appendChild(stats.domElement); count_particles = document.querySelector('.js-count-particles'); update = function() { stats.begin(); stats.end(); if (window.pJSDom[0].pJS.particles && window.pJSDom[0].pJS.particles.array) { count_particles.innerText = window.pJSDom[0].pJS.particles.array.length; } requestAnimationFrame(update); }; requestAnimationFrame(update);;
     </script>
 </body>
 </html>
