--- a/air_quality_web/about.html
+++ b/air_quality_web/about.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About | Air Quality Monitoring System</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css\about.css">
+    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.waves.min.js"></script>
     <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
@@ -19,7 +21,7 @@
     <div class="animated-background"></div>
     <div class="content">
         <a href="#" class="img">
-            <img src="C:\xampp\htdocs\air_quality_web\img\mini_logo.png" alt="" height="120px" width="150px">
+            <img src="img\mini_logo.png" alt="" height="120px" width="150px">
         </a>
         <ul>
             <li><a href="https://morpheus-pwn.github.io/airquality_web//air_quality_web/home_page.html">Home</a></li>
@@ -30,43 +32,82 @@
           <a class="button" href="https://mh-devanarayanan-2004.github.io/MINIPROJECT/userlogin.html">Login</a>
         </button>
     </div>
-    <div class="b-example-divider"></div>
-    <div class="container px-4 py-5" id="featured-3">
-      <div id="particles-js" width="960px" height="600px"></div>
-      <h2 class="pb-2 border-bottom">Columns with icons</h2>
-      <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
-        <div class="feature col">
-          <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-            <svg class="bi" width="1em" height="1em"><use xlink:href="#collection"/></svg>
-          </div>
-          <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-          <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-        </div>
-        <div class="feature col">
-          <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-            <svg class="bi" width="1em" height="1em"><use xlink:href="#people-circle"/></svg>
-          </div>
-          <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-          <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-          <a href="#" class="icon-link">
-            Call to action
-            <svg class="bi"><use xlink:href="#chevron-right"/></svg>
-          </a>
-        </div>
-        <div class="feature col">
-          <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-            <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"/></svg>
-          </div>
-          <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-          <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-          <a href="#" class="icon-link">
-            Call to action
-            <svg class="bi"><use xlink:href="#chevron-right"/></svg>
-          </a>
-        </div>
-        <div class="b-example-divider"></div>
+    <section class="about">
+      <div class="container">
+          <h1>About Us</h1>
+          <p>We are a passionate team of engineers, and environmental enthusiasts dedicated to tackling air pollution through technology. Our project, the Real-Time Air Quality Monitoring System with IoT, is designed to provide accurate and real-time air quality data, empowering individuals and communities to make informed decisions about their environment.The implementation of this Air Quality Monitoring System not only enhances public awareness regarding air pollution but also facilitates data-driven decision-making for environmental policies</p>
       </div>
-    </div> 
+    </section>
+    <div class="b-example-divider"></div>
+    <section id="mission" class="mission">
+      <div class="container">
+          <h2>Our Mission</h2>
+          <p>Our mission is to develop an accessible, scalable, and cost-effective solution for air quality monitoring. We aim to revolutionize air quality monitoring by enabling remote monitoring and analysis. The system is integrated with a web-based interface that allows users to visualize air quality metrics, receive real-time alerts for dangerous pollutant levels, and access historical trends.By leveraging IoT technology and the NodeMCU platform, we aim to enhance public awareness, promote environmental responsibility, and support data-driven policymaking.</p>
+      </div>
+    </section>
+    <div class="b-example-divider"></div>
+    <div class="container px-4 py-5" id="icon-grid">
+      <div id="particles-js" width="960px" height="600px"></div>
+      <h2 class="pb-2 border-bottom">Our Product Features</h2>
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 py-5">
+        <div class="col d-flex align-items-start">
+          <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#bootstrap"/></svg>
+          <div>
+            <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">IoT-Enabled Wireless Connectivity</h3>
+            <p>Uses Wi-Fi-enabled NodeMCU (ESP32) to transmit data to a cloud server, allowing remote access from anywhere.</p>
+          </div>
+        </div>
+        <div class="col d-flex align-items-start">
+          <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#cpu-fill"/></svg>
+          <div>
+            <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Real-Time Monitoring</h3>
+            <p>Monitors air quality parameters in real-time, providing instant updates on temperature, humidity, and air quality index.</p>
+          </div>
+        </div>
+        <div class="col d-flex align-items-start">
+          <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#calendar3"/></svg>
+          <div>
+            <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Cost-Effective Solution</h3>
+            <p>Offers a cost-effective alternative to traditional air quality monitoring methods, making it accessible to individuals and communities.</p>
+          </div>
+        </div>
+        <div class="col d-flex align-items-start">
+          <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#home"/></svg>
+          <div>
+            <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">User-Friendly Interface</h3>
+            <p>Provides a user-friendly interface, allowing users to visualize air quality metrics, receive alerts, and access historical data.</p>
+          </div>
+        </div>
+        <div class="col d-flex align-items-start">
+          <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#speedometer2"/></svg>
+          <div>
+            <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Easy Integration of Hardware</h3>
+            <p>Integrates with common hardware components, such as temperature sensors, humidity sensors, and air quality sensors, making it easy to set up and maintain.</p>
+          </div>
+        </div>
+        <div class="col d-flex align-items-start">
+          <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#toggles2"/></svg>
+          <div>
+            <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Scalability and Accessibility</h3>
+            <p>Designed to be scalable and accessible to a wide range of users, including individuals, communities, and organizations.</p>
+          </div>
+        </div>
+        <div class="col d-flex align-items-start">
+          <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#geo-fill"/></svg>
+          <div>
+            <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Battery backup</h3>
+            <p>Provides a battery backup to ensure uninterrupted operation in low-power environments.</p>
+          </div>
+        </div>
+        <div class="col d-flex align-items-start">
+          <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#tools"/></svg>
+          <div>
+            <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Open-Source Software</h3>
+            <p>Offers an open-source software platform, allowing users to customize and extend the system to meet their specific needs.</p>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="buttons">
       <a href="https://mh-devanarayanan-2004.github.io/MINIPROJECT/userlogin.html" class="btn-signing-main">Login</a>
     </div>
