--- a/air_quality_web/contact_us.html
+++ b/air_quality_web/contact_us.html
@@ -19,12 +19,12 @@
     <div class="animated-background"></div>
     <div class="content">
         <a href="#" class="img">
-            <img src="C:\xampp\htdocs\air_quality_web\img\mini_logo.png" alt="" height="120px" width="150px">
+            <img src="img\mini_logo.png" alt="" height="120px" width="150px">
         </a>
         <ul>
             <li><a href="https://morpheus-pwn.github.io/airquality_web//air_quality_web/home_page.html">Home</a></li>
             <li><a href="https://morpheus-pwn.github.io/airquality_web//air_quality_web/about.html">About</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="https://morpheus-pwn.github.io/airquality_web//air_quality_web/contact_us.html">Contact Us</a></li>
         </ul>
         <button>
           <a class="button" href="https://mh-devanarayanan-2004.github.io/MINIPROJECT/userlogin.html">Login</a>
@@ -72,7 +72,7 @@
       <ul class="nav col-md-4 justify-content-end">
         <li class="nav-item"><a href="https://morpheus-pwn.github.io/airquality_web//air_quality_web/home_page.html" class="nav-link px-2 text-body-secondary">Home  |    </a></li>
         <li class="nav-item"><a href="https://morpheus-pwn.github.io/airquality_web//air_quality_web/about.html" class="nav-link px-2 text-body-secondary">About    |</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Contact Us</a></li>
+        <li class="nav-item"><a href="https://morpheus-pwn.github.io/airquality_web//air_quality_web/contact_us.html" class="nav-link px-2 text-body-secondary">Contact Us</a></li>
       </ul>
     </footer>
     <script>
